--- a/res/layout/record_activity.xml
+++ b/res/layout/record_activity.xml
@@ -2,6 +2,7 @@
     android:id="@+id/recordMainLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/background"
     android:layout_centerHorizontal="true"
     android:orientation="vertical" >
 
